# project-saas

./: .dockerignore  .env.example  .gitignore  Makefile  PROJECT_STATUS.md  README.md  debug_url.txt  nx.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json
apps/app/: next.config.mjs  package.json  project.json  tailwind.config.ts  tsconfig.json
apps/app/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/app/src/: index.ts
apps/backend/: .dockerignore  Dockerfile  project.json  pyproject.toml  requirements.txt
apps/backend/migrations/: alembic.ini  env.py
apps/backend/migrations/versions/: 0001_initial_schema.py
apps/backend/src/: config.py  database.py  dependencies.py  events.py  main.py
apps/backend/src/middleware/: tenant.py
apps/backend/src/routers/: auth.py  financial_contracts.py  projects.py  tasks.py  time_logs.py  webhooks.py
apps/backend/src/shared/observability/: __init__.py  context.py  inject.py  logging.py  metrics.py  middleware.py
apps/backend/src/shared/outbox/: relay.py
apps/backend/src/shared/tenant/: migrate_tenants.py  provisioning.py
apps/backend/tests/: conftest.py  test_auth.py  test_finops_webhooks.py  test_multi_tenancy.py  test_observability.py  test_projects_tasks.py
apps/e2e-tests/: project.json  pyproject.toml
apps/e2e-tests/tests/: conftest.py  test_e2e_flow.py
apps/landing/: Dockerfile  next.config.mjs  next.config.ts  package.json  project.json  tailwind.config.ts  tsconfig.json
apps/landing/app/: globals.css  layout.tsx  page.tsx  roi-calculator.tsx
apps/landing/src/: index.ts
apps/workers/: package.json  project.json  pyproject.toml
apps/workers/src/: config.py  database.py  idempotency.py  index.ts  runner.py  topology.py
apps/workers/src/shared/observability/: extract.py
apps/workers/src/subscribers/: git_consumer.py  margin_consumer.py
apps/workers/tests/: test_workers.py
docs/architecture/: 00-Executive-Summary.md  01-Product-Vision-Differentiation.md  02-Multi-Tenancy-Data-Strategy.md  03-Identity-Security-RBAC.md  04-Domain-Design-DDD-CQRS.md  05-Event-Driven-Architecture.md  06-FinOps-TimeTracking-Engine.md  07-Predictive-Analytics-SLA.md  08-Frontend-DesignSystem-Landing.md  09-Technology-Stack-Matrix.md  10-Infrastructure-Docker-K8s.md  10-Infrastructure-Docker-Scaling.md  11-Caching-Performance.md  12-Observability-Telemetry.md  13-Security-DevSecOps.md  14-Billing-Metering-Tiers.md  15-Monorepo-Structure.md  16-Roadmap-FinOps-Risks.md  ADR-Records.md  README.md
docs/architecture/diagrams/: c4-container.mmd  c4-context.mmd  erd-core.mmd
infra/docker/: .env.example  docker-compose.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/loki/: loki-config.yml
infra/postgres/: 01-create-app-role.sh
infra/prometheus/: prometheus.yml
infra/tempo/: tempo.yml
infra/traefik/dynamic/: middlewares.yml  routes.yml  tls.yml
libs/api-contracts/: package.json  project.json  tsconfig.json
libs/api-contracts/src/: index.ts
libs/db-clients/: project.json  pyproject.toml
libs/db-clients/db_clients/: __init__.py  session.py
libs/db-clients/tests/: __init__.py  test_rls.py
libs/ddd-core/: project.json  pyproject.toml
libs/ddd-core/ddd_core/: __init__.py  base.py  outbox.py
libs/ddd-core/tests/: __init__.py  test_ddd.py
libs/design-system/: package.json  project.json  tsconfig.json
libs/design-system/src/: index.ts
libs/security-utils/: project.json  pyproject.toml
libs/security-utils/security_utils/: __init__.py  hashing.py  hmac.py  jwt.py
libs/security-utils/tests/: __init__.py  test_security.py
libs/ui-tokens/: package.json
libs/ui-tokens/src/: index.ts  tokens.css  tokens.json
tools/: codegen-asyncapi.ts  codegen-openapi.ts
