[project]
name = "saas-workers"
version = "0.1.0"
description = "SaaS PM+FinOps Workers (FastStream)"
readme = "README.md"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
