[project]
name = "saas-workers"
version = "0.1.0"
description = "SaaS PM+FinOps Workers (FastStream) — consumidores async de eventos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faststream==0.5.6",
    "pydantic==2.9.0",
    "pydantic-settings==2.3.0",
    "sqlalchemy==2.0.35",
    "asyncpg==0.29.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.6.0",
    "mypy==1.11.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
